--- a/layouts/qui-sommes-nous.html
+++ b/layouts/qui-sommes-nous.html
@@ -63,7 +63,10 @@
                 <div class="MembreAssociation">
                     <span class="imageAvatar imageAvatar-01 imageAvatar-association"></span>
                     <div class="MembreAssociation-description">
-                        <div><span class="MembreAssociation-nomComplet">Hélène Le Roux</span><span class="MembreAssociation-adresse">( Orthophoniste - 3 allée du stade - 22680 Etables/Mer )</div>
+                        <div class="MembreAssociation-nomComplet">Hélène Le Roux</div>
+                        <div class="MembreAssociation-adresse">
+                            <span>Orthophoniste</span><span>3 allée du stade</span><span>22680 Etables/Mer</span>
+                        </div>
                         <p>DU "rééducation et réadaptation des fonctions auditives de l'adulte".</p>
                         <p>Formatrice en surdités, aphasies et maladies neuro-dégénératives.</p>
                         <p>Conceptrice de logiciels d'évaluation et de rééducation dans le domaine sensoriel.</p>  
@@ -73,35 +76,49 @@
                 <div class="MembreAssociation">
                     <span class="imageAvatar imageAvatar-03 imageAvatar-association"></span>
                     <div class="MembreAssociation-description">
-                        <div><span class="MembreAssociation-nomComplet">Kristell Bourdin</span><span class="MembreAssociation-adresse">( Orthophoniste - 8 rue Lamennais - 22100 Dinan )</span></div>
-                            <p>Formatrice en rééducation vocale, prévention des troubles vocaux et prévention des troubles du langage.</p>
+                        <div class="MembreAssociation-nomComplet">Kristell Bourdin</div>
+                        <div class="MembreAssociation-adresse">
+                            <span>Orthophoniste</span><span>8 rue Lamennais</span><span>22100 Dinan</span>
+                        </div>
+                        <p>Formatrice en rééducation vocale, prévention des troubles vocaux et prévention des troubles du langage.</p>
                     </div>
                 </div>
                 <h3 class="MembreAssociation-titre">Secrétaire adjointe</h3>
                 <div class="MembreAssociation">
                     <span class="imageAvatar imageAvatar-05 imageAvatar-association"></span>
                     <div class="MembreAssociation-description">
-                        <div><span class="MembreAssociation-nomComplet">Muriel Rio-Fiorina</span><span class="MembreAssociation-adresse">( Orthophoniste - 8 rue Lamennais, 22100 Dinan )</span></div>
+                        <div class="MembreAssociation-nomComplet">Muriel Rio-Fiorina</div>
+                        <div class="MembreAssociation-adresse">
+                            <span>Orthophoniste</span><span>8 rue Lamennais</span><span>22100 Dinan</span>
+                        </div>
                     </div>
                 </div>
                 <h3 class="MembreAssociation-titre">Trésorière</h3>
                 <div class="MembreAssociation">
                     <span class="imageAvatar imageAvatar-03 imageAvatar-association"></span>
                     <div class="MembreAssociation-description">
-                        <div><span class="MembreAssociation-nomComplet">Blandine Le Pape</span><span class="MembreAssociation-adresse">( Orthophoniste - 8 rue Lamennais, 22100 Dinan )</span></div>
+                        <div class="MembreAssociation-nomComplet">Blandine Le Pape</div>
+                        <div class="MembreAssociation-adresse">
+                            <span>Orthophoniste</span><span>8 rue Lamennais</span><span>22100 Dinan</span>
+                        </div>
                     </div>
                 </div>
                 <h3 class="MembreAssociation-titre">Membres du conseil d'administration</h3>
                 <div class="MembreAssociation">
                     <span class="imageAvatar imageAvatar-06 imageAvatar-association"></span>
                     <div class="MembreAssociation-description">
-                        <div><span class="MembreAssociation-nomComplet">Carole Le Gaillard</span><span class="MembreAssociation-adresse">( Orthophoniste - 42B rue du Port, 22530 Mûr De Bretagne )</span></div>
+                        <div class="MembreAssociation-nomComplet">Carole Le Gaillard</div>
+                        <div class="MembreAssociation-adresse">
+                            <span>Orthophoniste</span><span>42B rue du Port</span><span>22530 Mûr De Bretagne</span>
+                        </div>
                     </div>
                 </div>
                 <div class="MembreAssociation">
                     <span class="imageAvatar imageAvatar-04 imageAvatar-association"></span>
                     <div class="MembreAssociation-description">
-                        <div><span class="MembreAssociation-nomComplet">Amandine Lemière</span><span class="MembreAssociation-adresse">(Orthophoniste - 28 av Charles De Gaulles - 35410 Domloup)</span></div>
+                        <div class="MembreAssociation-nomComplet">Amandine Lemière</div>
+                        <div class="MembreAssociation-adresse">
+                            <div>Orthophoniste</div><div>28 av Charles De Gaulles</div><div>35410 Domloup</div></div>
                     </div>
                 </div>
             </div>
