ajout maquette adhesion

--- a/css/qui-sommes-nous.less
+++ b/css/qui-sommes-nous.less
@@ -3,10 +3,6 @@ body.quiSommesNous {
     background-color: white;    
 }
 
-.quiSommesNous p {
-    margin-bottom: 1.5em;
-}
-
 .quiSommesNous-header {
     font-size: .92em;
     padding: 20px 0;
@@ -101,10 +97,11 @@ body.quiSommesNous {
 
 .MembreAssociation-nomComplet {
     font-size: .9em;
-    line-height: 0;
+    line-height: 1.5em;
 }
 
 .MembreAssociation-adresse {
+    line-height: 1em;
     font-size: .9em;
     display: inline-block;
     color: @color-font-secondary;
@@ -151,17 +148,8 @@ body.quiSommesNous {
     margin-bottom: 20px;
 }
 
-.quiSommesNous-objectif--titre {
-}
-
-.quiSommesNous-objectif--description {
-}
-
 @media only screen and (min-width: 510px) {
     
-    // .quiSommesNous-header {
-    //     max-width: 390px;
-    // }    
 }
     
 @media only screen and (min-width: 860px){
