--- a/layouts/qui-sommes-nous.html
+++ b/layouts/qui-sommes-nous.html
@@ -65,7 +65,7 @@
                     <div class="MembreAssociation-description">
                         <div class="MembreAssociation-nomComplet">Hélène Le Roux</div>
                         <div class="MembreAssociation-adresse">
-                            <span>Orthophoniste</span><span>3 allée du stade</span><span>22680 Etables/Mer</span>
+                            <div>Orthophoniste</div><div>3 allée du stade</div><div>22680 Etables/Mer</div>
                         </div>
                         <p>DU "rééducation et réadaptation des fonctions auditives de l'adulte".</p>
                         <p>Formatrice en surdités, aphasies et maladies neuro-dégénératives.</p>
@@ -78,7 +78,7 @@
                     <div class="MembreAssociation-description">
                         <div class="MembreAssociation-nomComplet">Kristell Bourdin</div>
                         <div class="MembreAssociation-adresse">
-                            <span>Orthophoniste</span><span>8 rue Lamennais</span><span>22100 Dinan</span>
+                            <div>Orthophoniste</div><div>8 rue Lamennais</div><div>22100 Dinan</div>
                         </div>
                         <p>Formatrice en rééducation vocale, prévention des troubles vocaux et prévention des troubles du langage.</p>
                     </div>
@@ -89,7 +89,7 @@
                     <div class="MembreAssociation-description">
                         <div class="MembreAssociation-nomComplet">Muriel Rio-Fiorina</div>
                         <div class="MembreAssociation-adresse">
-                            <span>Orthophoniste</span><span>8 rue Lamennais</span><span>22100 Dinan</span>
+                            <div>Orthophoniste</div><div>8 rue Lamennais</div><div>22100 Dinan</div>
                         </div>
                     </div>
                 </div>
@@ -99,7 +99,7 @@
                     <div class="MembreAssociation-description">
                         <div class="MembreAssociation-nomComplet">Blandine Le Pape</div>
                         <div class="MembreAssociation-adresse">
-                            <span>Orthophoniste</span><span>8 rue Lamennais</span><span>22100 Dinan</span>
+                            <div>Orthophoniste</div><div>8 rue Lamennais</div><div>22100 Dinan</div>
                         </div>
                     </div>
                 </div>
@@ -109,7 +109,7 @@
                     <div class="MembreAssociation-description">
                         <div class="MembreAssociation-nomComplet">Carole Le Gaillard</div>
                         <div class="MembreAssociation-adresse">
-                            <span>Orthophoniste</span><span>42B rue du Port</span><span>22530 Mûr De Bretagne</span>
+                            <div>Orthophoniste</div><div>42B rue du Port</div><div>22530 Mûr De Bretagne</div>
                         </div>
                     </div>
                 </div>
