--- a/css/article.less
+++ b/css/article.less
@@ -97,7 +97,7 @@
     font-size: 0.75rem;
     margin-left: 24px;
     margin-top: -5px;
-    color: color-font-secondary;
+    color: @color-font-secondary;
 }
 
 @media only screen and (min-width: 510px) {
