--- a/layouts/contrat-formation-salarie.html
+++ b/layouts/contrat-formation-salarie.html
@@ -3,82 +3,122 @@
 
 <head>
     <meta charset="UTF-8">
-    <title>Document</title>
+    <title>contrat formation salarié</title>
     <link rel="stylesheet" href="../../../vendor/base.css">
     <link rel="stylesheet" href="../../../vendor/normalize.css">
-    <link rel="stylesheet" href="../../../src/assets/documents/contrat.css" >
+    <link rel="stylesheet" href="../../../src/assets/documents/contrat.css">
 </head>
 
 <body>
-    <p>
-        <img class="logo-ogdpc" src="../../../src/assets/documents/logo-ogdpc-500.png" width="75" height="75" alt="logo-apropos">
-    </p>
-    <div class="logo-apropos-container">
-        <img class="logo-apropos" src="../../../src/assets/documents/logo-apropos-500.png" width="125" height="125" alt="logo-apropos">
-    </div>
-    <p>3 allée du stade 22680 Etables/Mer Numéro de Déclaration d’activité enregistrée sous le n° 53 22 08381 22 auprès de la
-        Préfecture de la région Bretagne ODPC habilité à dispenser des programmes de DPC</p>
-    <h1>Convention de Formation Professionnelle</h1>
-    <p>HL/KB Entre les soussignés : L'organisme de formation : A PROPOS Représenté par Hélène Le Roux -­‐ Présidente Et l’employeur
-        (désignation de l’établissement et adresse du siège social, n° SIRET) désigné ci-­‐après : (Nom employeur, adresse):
-        __________________________________________________________________________ représenté par (représentant de l'employeur).
-        (Indiquer le nom du représentant légal, signataire de la convention) Est conclue la convention suivante, en application
-        des dispositions de la sixième partie du Code du Travail portant organisation de la formation professionnelle tout
-        au long de la vie. L’action de formation se définit comme une ou plusieurs journées consécutives de formation. Les
-        durées et dates de l’action de formation sont précisées respectivement aux articles 2 et 5 du présent contrat.</p>
-    <h2>Article 1 : Objet :</h2>
-    <p>En exécution de la présente convention, l'organisme de formation s'engage à organiser l'action de formation intitulée:</p>
-    <h2>Article 2 : Nature et caractéristique des actions de formation</h2>
-    <p>L'action de formation entre dans la catégorie des actions de formation prévues par l'article L.6313-­‐1 du Code du travail
-        : Action d’acquisition, d’entretien ou de perfectionnement des connaissances. Elle a pour objectif l'entretien et
-        le perfectionnement des connaissances. A l'issue de la formation, une attestation de présence sera délivrée au stagiaire.
-        Le suivi de la formation ne donne pas lieu à délivrance de diplôme, certificat ou de tout autre document la sanctionnant.
-        Sa durée est fixée à <b>{{duree}}</b>.</p>
-    <p>Le programme de l'action de formation, les noms et qualités du formateur figurent en annexe du présent contrat.
-    </p>
-    <h2>Article 3 : Niveau de connaissances préalables nécessaires</h2>
-    <p>Afin de suivre au mieux l'action de formation susvisée et obtenir la ou les qualifications auxquelles elle prépare, le
-        stagiaire est informé qu'il est nécessaire de posséder avant l'entrée en formation, le niveau de connaissances suivant
-        : Certificat de capacité d'orthophonie.</p>
-    <h2>Article 4 : Effectif formé</h2>
-    <p>L’organisme A Propos accueillera les personnes suivantes : M…………………………………. M…………………………………. M………………………………….
-    </p>
-    <h2>Article 5 : Organisation de l'action de formation</h2>
-    <p>L'action de formation se déroulera comme suit : Dates : vendredi 13 et samedi 14 novembre 2015 Horaires : 9h à 17h (repas
-        inclus) Lieu : Auberge de jeunesse 5 rue de Kerbriant 29000 Brest L’action de formation est organisée pour un effectif
-        de 20 stagiaires. Les moyens pédagogiques, techniques et d’encadrement mis en œuvre sont détaillés en annexe du présent
-        contrat.
-    </p>
-    <h2>Article 6 : Dispositions financières</h2>
-    <p>En contrepartie de cette action de formation, l’employeur s’acquittera des coûts suivants : Frais de formation : coût
-        unitaire T.T.C : 250€ X ……stagiaire(s) =………. € Frais de restauration inclus.</p>
-    <h2>Article 4 : Modalités de règlement</h2>
-    <p>Le paiement sera dû à réception de la facture. A régler par : chèque bancaire à l’ordre d’A Propos, virement, mandat
-        administratif (rayer les mentions inutiles)</p>
-    <h2>Article 5 : Dispositions financières</h2>
-    <p>En application de l’article L 6354-­‐1 du code du travail, il est convenu entre les signataires de la présente convention,
-        que faute de réalisation totale ou partielle de la prestation de formation, l’organisme de formation remboursera
-        au cocontractant les sommes qu’il aura indûment perçues de ce fait. C'est-­‐à-­‐dire les sommes qui ne correspondront
-        pas à la réalisation de la prestation de formation. La non réalisation totale de l’action due à la carence du prestataire
-        ou au renoncement à la prestation par l’employeur ne donnera pas lieu à une facturation au titre de la formation
-        professionnelle continue.</p>
-    <p>La réalisation partielle de la prestation de formation, imputable ou non à l’organisme de formation ou à l’employeur,
-        ne donnera lieu qu’à facturation, au titre de la formation professionnelle continue, des sommes correspondant à la
-        réalisation effective de la prestation.</p>
-    <h2>Article 6 : Dédommagement, réparation ou dédit</h2>
-    <p>En cas de renoncement ou de réalisation partielle de la prestation imputable à l’organisme de formation, à moins de 10
-        jours francs avant le début de l’action mentionnée à l’article 1, celui-­‐ci s’engage à verser à l’employeur la somme
-        de 50€ au titre de dédit. En cas de renoncement ou de réalisation partielle de la prestation imputable à l’employeur,
-        à moins de 10 jours francs avant le début de l’action mentionnée à l’article 1, celui-­‐ci s’engage à verser au prestataire
-        de formation la somme de 50€ au titre de dédit. Les sommes liées au dédit sont distinctes de celles correspondantes
-        à la réalisation de la prestation. Ces dépenses resteront à la charge de l’employeur qui ne pourra les imputer sur
-        son obligation de participation au financement de la formation professionnelle continue. Elles ne pourront faire
-        l’objet d’une demande de remboursement ou de prise en charge par l’OPCA.</p>
-    <h2>Article 7 : Cas de différend(s)</h2>
-    <p>Si une contestation ou un différend n'ont pu être réglés à l'amiable, le Tribunal de la juridiction dont dépend l'organisme
-        de formation sera seul compétent pour régler le litige. Le stagiaire reconnaît avoir pris connaissance du règlement
-        intérieur.</p>
-    <p>Fait en double exemplaire, à Etables, le Pour l’employeur Pour l'organisme de formation (cachet, nom et qualité du signataire)
-        La présidente, Hélène Le Roux</p>
+    <header>
+        <div class="logo-ogdpc">
+            <img src="../../../src/assets/documents/logo-ogdpc-500.png" width="75" height="75" alt="logo-apropos">
+            <div> ODPC habilité à dispenser</div>
+            <div>des programmes de DPC</div>
+        </div>
+        <div class="logo-apropos-container">
+            <img class="logo-apropos" src="../../../src/assets/documents/logo-apropos-500.png" width="125" height="125" alt="logo-apropos">
+        </div>
+        <div class="apropos-adresse">
+            <div>A PROPOS</div>
+            <div>3 allée du stade</div>
+            <div>22680 Etables/Mer</div>
+        </div>
+        <div class="numero-prefecture">
+            <div>Numéro de</div>
+            <div>Déclaration d’activité</div>
+            <div>enregistrée sous le</div>
+            <div>n° 53 22 08381 22</div>
+            <div>auprès de la Préfecture</div>
+            <div> de la région Bretagne</div>
+        </div>
+    </header>
+    <section>
+        <h1>Convention de Formation Professionnelle</h1>
+        <p>Entre l'organisme de formation : <strong>"A PROPOS"</strong>, représenté par Hélène Le Roux ­‐ Présidente</p>
+        <p>et l’employeur <span class="font-secondary">(désignation de l’établissement et adresse du siège social, n° SIRET) </span>désigné
+            ci-après
+        </p>
+        <p>.....................................................................................................................................................................................................</p>
+        <p>.....................................................................................................................................................................................................</p>
+        <p>représenté par <span class="font-secondary">(Indiquer le nom du représentant légal, signataire de la convention)</span>            ......................................................... ..........................................................
+            est conclue la convention suivante, en application des dispositions de la sixième partie du Code du Travail portant
+            organisation de la formation professionnelle tout au long de la vie.</p>
+        <p>L’action de formation se définit comme une ou plusieurs journées consécutives de formation. Les durées et dates de
+            l’action de formation sont précisées respectivement aux articles 2 et 5 du présent contrat.</p>
+        <h2>Article 1 : Objet :</h2>
+        <p>En exécution de la présente convention, l'organisme de formation s'engage à organiser l'action de formation intitulée:</p>
+        <p><strong>{{formation}}</strong>.</p>
+        <h2>Article 2 : Nature et caractéristique des actions de formation</h2>
+        <p>L'action de formation entre dans la catégorie des actions de formation prévues par l'article L.6313-1 du Code du
+            travail : Action d’acquisition, d’entretien ou de perfectionnement des connaissances. Elle a pour objectif l'entretien
+            et le perfectionnement des connaissances.</p>
+        <p> A l'issue de la formation, une attestation de présence sera délivrée au stagiaire. Le suivi de la formation ne donne
+            pas lieu à délivrance de diplôme, certificat ou de tout autre document la sanctionnant.</p>
+        <p>Sa durée est fixée à <strong>{{duree}}</strong>. Le programme de l'action de formation, les noms et qualités du formateur
+            figurent en annexe du présent contrat.</p>
+        <h2>Article 3 : Niveau de connaissances préalables nécessaires</h2>
+        <p>Afin de suivre au mieux l'action de formation susvisée et obtenir la ou les qualifications auxquelles elle prépare,
+            le stagiaire est informé qu'il est nécessaire de posséder avant l'entrée en formation, le niveau de connaissances
+            suivant : Certificat de capacité d'orthophonie.</p>
+        <h2>Article 4 : Effectif formé</h2>
+        <p>L’organisme A Propos accueillera les personnes suivantes <span class="font-secondary">(Nom, prénom)</span> :</p>
+        <p>..............................................................................................</p>
+        <p>..............................................................................................</p>
+        <div class="keepTogether">
+            <h2>Article 5 : Organisation de l'action de formation</h2>
+            <p>L'action de formation en présentiel se déroulera comme suit :</p>
+            <p>Dates: <strong> {{datePdf}}</strong></p>
+            <p>Horaires: <strong>{{horaire}}</strong></p>
+            <p>Lieu: <strong>{{lieu}}</strong></p>
+            <p>L’action de formation est organisée pour un effectif de <strong>{{effectif}}</strong> stagiaires.</p>
+            <p>Les moyens pédagogiques, techniques et d’encadrement mis en œuvre sont détaillés en annexe du présent contrat.</p>
+        </div>
+        <h2>Article 6 : Dispositions financières</h2>
+        <p>En contrepartie de cette action de formation, l’employeur s’acquittera des coûts suivants : Frais de formation :
+            coût unitaire T.T.C : 250€ X ..... stagiaire(s) = .......... €, Frais de restauration inclus.</p>
+        <h2>Article 7 : Modalités de règlement</h2>
+        <p>Le paiement sera dû à réception de la facture.</p>
+        <p>A régler par <span class="font-secondary">(rayer les mentions inutiles)</span>: chèque bancaire à l’ordre d’A Propos,
+            virement, mandat administratif</p>
+        <h2>Article 8 : Dispositions financières</h2>
+        <p>En application de l’article L 6354-1 du code du travail, il est convenu entre les signataires de la présente convention,
+            que faute de réalisation totale ou partielle de la prestation de formation, l’organisme de formation remboursera
+            au cocontractant les sommes qu’il aura indûment perçues de ce fait. C'est-à-dire les sommes qui ne correspondront
+            pas à la réalisation de la prestation de formation.</p>
+        <p>La non réalisation totale de l’action due à la carence du prestataire ou au renoncement à la prestation par l’employeur
+            ne donnera pas lieu à une facturation au titre de la formation professionnelle continue.</p>
+        <p>La réalisation partielle de la prestation de formation, imputable ou non à l’organisme de formation ou à l’employeur,
+            ne donnera lieu qu’à facturation, au titre de la formation professionnelle continue, des sommes correspondant
+            à la réalisation effective de la prestation.</p>
+        <h2>Article 9 : Dédommagement, réparation ou dédit</h2>
+        <p>En cas de renoncement ou de réalisation partielle de la prestation imputable à l’organisme de formation, à moins
+            de 10 jours francs avant le début de l’action mentionnée à l’article 1, celui-ci s’engage à verser à l’employeur
+            la somme de 50€ au titre de dédit.</p>
+        <p>En cas de renoncement ou de réalisation partielle de la prestation imputable à l’employeur, à moins de 10 jours francs
+            avant le début de l’action mentionnée à l’article 1, celui-ci s’engage à verser au prestataire de formation la
+            somme de 50€ au titre de dédit.
+        </p>
+        <p> Les sommes liées au dédit sont distinctes de celles correspondantes à la réalisation de la prestation. Ces dépenses
+            resteront à la charge de l’employeur qui ne pourra les imputer sur son obligation de participation au financement
+            de la formation professionnelle continue. Elles ne pourront faire l’objet d’une demande de remboursement ou de
+            prise en charge par l’OPCA.</p>
+        <h2>Article 10 : Cas de différend(s)</h2>
+        <p>Si une contestation ou un différend n'ont pu être réglés à l'amiable, le Tribunal de la juridiction dont dépend l'organisme
+            de formation sera seul compétent pour régler le litige. Le stagiaire reconnaît avoir pris connaissance du règlement
+            intérieur.
+        </p>
+        <br>
+        <footer>
+            <div>Fait en double exemplaire, à Etables, le: <span>............................................................</span></div>
+            <div class="signature-apprenant">Pour l'employeur<span class="font-secondary"> (cachet, nom et qualité du signataire)</span></div>
+            <div class="signature-apropos">
+                <div>Pour l'organisme de formation</div>
+                <div> La présidente, Hélène Le Roux</div>
+                <img src="../../../src/assets/images/signature-apropos.png" width="202px" alt="signature-apropos">
+            </div>
+        </footer>
+    </section>
 </body>
+
 </html>
