--- a/layouts/partials/nav.html
+++ b/layouts/partials/nav.html
@@ -1,6 +1,6 @@
 <div class="pusher">
     <header class="header">
-        <div class="u-floatRight">
+        <div class="header__menu u-floatRight">
             <a href="#" class="header__icon"></a>
             <a href="#" class="header__logo">MENU</a>
         </div>
