--- a/src/assets/documents/contrat.css
+++ b/src/assets/documents/contrat.css
@@ -15,17 +15,13 @@
 }
 
 html {
-    font-family: regular;    
+    font-family: regular;
+    color: #111;    
 }
 
-h2 {
-    margin-top: 20px;
-}
-
-p {
-    margin-left: 10px;
+ol, ul {
     margin-top: 10px;
-    line-height: 1.6em;
+    margin-left: 10px;
 }
 
 ul>li {
@@ -36,21 +32,97 @@ li {
     list-style-type: circle;
 }
 
-.logo-ogdpc {
-    float:left;
+strong {
+    font-style: italic;
+    font-weight: bold;
+    font-variant: small-caps;
+    color: #000;
+    /*text-decoration: underline;*/
 }
 
-.logo-apropos {
-    /*float: right;*/
+/*strong::before,
+strong::after {
+    content: "\"";
+}*/
+
+h1 {
+    text-align: center;
+    font-weight: normal;
+    margin-bottom: 80px;
+}
+
+h2 {
+    margin-top: 20px;
+    font-weight: normal;
+    line-height: 1em;
+    page-break-inside: avoid;
+}
+
+h3 {
+    margin-top: 10px;
+    font-weight: normal;
+    line-height: 1em;
+    page-break-inside: avoid;
+}
+
+.keepTogether {
+    page-break-inside:avoid;
+}    
+
+.keepTogether > div {
+    margin-left: 10px;
+}    
+
+.font-secondary {
+    color: gray;
+}
+
+p {
+    margin-left: 10px;
+    margin-top: 10px;
+    line-height: 1.6em;
+}
+
+header {
+    position: relative;
+    color: dimgray;
+    font-size: .9em;
+}
+
+.logo-ogdpc {
+    position: absolute;
 }
 
 .logo-apropos-container {
-    left: 0;
-    right: 0;
-    margin: auto;
-    width: 400px;
+    text-align: center;
+    margin-bottom: 50px;
 }
 
-.clear {
-    clear: both;
+.apropos-adresse {
+    position: absolute;
+    top: 0;
+    right: 0;
+    width: 140px;
+}
+
+.numero-prefecture {
+    position: absolute;
+    top: 70px;
+    right: 0;
+    width: 140px;
+}
+
+.signature-apprenant {
+    float: left;
+}
+
+.signature-apropos {
+    float: right;
+    /*margin-top: 10px;*/
+}
+
+.clearfix:after {
+  content: "";
+  display: table;
+  clear: both;
 }
