Modification des pdfs

--- a/layouts/reglement-interieur-formation-apropos.html
+++ b/layouts/reglement-interieur-formation-apropos.html
@@ -12,7 +12,7 @@
             margin-top: 8px;
             line-height: 1.4em;
         }
-               
+        
         .titre-info {
             font-size: 16px;
             font-weight: bold;
@@ -36,7 +36,7 @@
             <img class="logo-apropos" src="../src/assets/documents/logo-apropos-500.png" width="75" height="75" alt="logo-apropos">
         </div>
         <div class="logo-apropos-container">
-            <h1>Bulletin d’adhésion 2016</h1>
+            <h1>Règlement intérieur</h1>
         </div>
         <div class="apropos-adresse">
             <div>A PROPOS</div>
@@ -45,7 +45,6 @@
         </div>
     </header>
     <section>
-        <h1>REGLEMENT INTERIEUR</h1>
         <h2>TITRE I: OBJET ET CHAMP D’APPLICATION</h2>
         <h3>Article 1 : Objet</h3>
         <p>Conformément aux dispositions de l’article L 920-5-1 du Code du travail, le présent règlement intérieur a pour objet
@@ -88,18 +87,19 @@
             par le présent document.</p>
         <h3>Article 9 : Horaires de stage</h3>
         <p>Les stagiaires doivent respecter les horaires de stage fixés par l’animateur de formation.</p>
+
+        <h3>Article 10 : Entrées, sorties et déplacements</h3>
+        <p>Les stagiaires n’ont accès aux locaux de l’établissement que pour le déroulement des séances de formation.</p>
+        <p>Il est interdit d’introduire dans les locaux des personnes étrangères au stage.</p>
         <div class="keepTogether">
-            <h3>Article 10 : Entrées, sorties et déplacements</h3>
-            <p>Les stagiaires n’ont accès aux locaux de l’établissement que pour le déroulement des séances de formation.</p>
-            <p>Il est interdit d’introduire dans les locaux des personnes étrangères au stage.</p>
+            <h3>Article 11 : Usage du matériel</h3>
+            <p>Le stagiaire est tenu de conserver en bon état, d’une façon générale, tout le matériel mis à sa disposition pendant
+                le stage. Il ne doit pas utiliser ce matériel à d’autres fins que celles prévues pour le stage et notamment
+                à des fins personnelles, sans autorisation.</p>
+            <p>A la fin du stage, le stagiaire est tenu de restituer tout matériel et document en sa possession appartenant
+                à A Propos.
+            </p>
         </div>
-        <h3>Article 11 : Usage du matériel</h3>
-        <p>Le stagiaire est tenu de conserver en bon état, d’une façon générale, tout le matériel mis à sa disposition pendant
-            le stage. Il ne doit pas utiliser ce matériel à d’autres fins que celles prévues pour le stage et notamment à
-            des fins personnelles, sans autorisation.</p>
-        <p>A la fin du stage, le stagiaire est tenu de restituer tout matériel et document en sa possession appartenant à A
-            Propos.
-        </p>
         <h3>Article 12 : Enregistrements</h3>
         <p>Il est formellement interdit, sauf dérogation expresse de l’animateur de formation et d’un responsable d’ A Propos
             d’enregistrer ou de filmer les séances de formation.</p>
@@ -139,9 +139,7 @@
         <br>
         <footer>
             <div class="signature-apropos">
-                <div>Fait à Etables, le 15 avril 2014</div><br>
-                <div> La présidente, Hélène Le Roux</div>
-                <img src="../src/assets/images/signature-apropos.png" width="260px" alt="signature-apropos">
+                <div>Fait à Etables, le 15 avril 2014</div>
             </div>
         </footer>
     </section>
