--- a/layouts/bulletin-adhesion-2016.html
+++ b/layouts/bulletin-adhesion-2016.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="UTF-8">
-    <title>Bulletin adhésion 2015</title>
+    <title>Bulletin adhésion 2016</title>
     <link rel="stylesheet" href="../vendor/base.css">
     <link rel="stylesheet" href="../vendor/normalize.css">
     <link rel="stylesheet" href="../src/assets/documents/contrat.css">
@@ -15,10 +15,6 @@
         
         .content {
             font-size: 1.1em;
-        }
-        
-        .signature-apropos {
-            /*float: none;*/
         }
         
         .champ {
@@ -64,11 +60,11 @@
         .tresoriere {
             text-align: center;
             font-style: italic;
-            margin-bottom: 100px;
+            margin-bottom: 80px;
         }
         
         footer {
-            margin-top: 80px;
+            margin-top: 50px;
         }
     </style>
 </head>
@@ -115,11 +111,7 @@
                     <div class="check"></div><span>J’aimerais participer à la normalisation en cours du test SIGL (ex Focaldivi)</span>
                 </div>
                 <div class="check-container">
-                    <div class="check"></div><span>Je souhaite m’inscrire à une formation en 2016 </span><span class="font-secondary"> (préciser laquelle)</span>
-                    <div class="nom-formation">........................................................................................................................................................................</div>
-                </div>
-                <div class="check-container">
-                    <span class="participation-action">Je souhaite aider à la réalisation des actions suivantes</span>
+                    <span class="participation-action">Je souhaite contribuer à la réalisation des actions proposées</span>
                 </div>
                 <div class="check-container level1">
                     <div class="check"></div><span>JNA 2016</span>
@@ -127,8 +119,16 @@
                 <div class="check-container level1">
                     <div class="check"></div><span>Action 1 bébé, 1 livre 2016</span>
                 </div>
+                <div class="check-container level1">
+                    <div class="check"></div><span>Salon du livre des monts d'Arrée 2016</span>
+                </div>
+                <div class="check-container level1">
+                    <div class="check"></div><span>Actions de formation avec IPERIA</span>
+                </div>
                 <div class="check-container">
                     <div class="check"></div><span>Je souhaite être aidé pour la réalisation d’autres actions de sensibilisation, par exemple</span>
+                    <div class="nom-formation">........................................................................................................................................................................</div>
+                    <div class="nom-formation second-line">........................................................................................................................................................................</div>
                 </div>
                 <div class="check-container">
                     <div class="check"></div><span>Je peux proposer une formation, par exemple</span>
@@ -145,7 +145,7 @@
         <footer>
             <div class="signature-apropos">
                 <div> La présidente, Hélène Le Roux</div>
-                <img src="../src/assets/images/signature-apropos.png" width="250px" alt="signature-apropos">
+                <img src="../src/assets/images/signature-apropos.png" width="200px" alt="signature-apropos">
             </div>
         </footer>
     </section>
