Ajout de la visu de photos

--- a/layouts/partials/header.html
+++ b/layouts/partials/header.html
@@ -36,5 +36,7 @@
         <link rel="stylesheet" href="../../css/post.less">
         <link rel="stylesheet" href="../../css/rwd.less">
         <link rel="stylesheet" href="../../css/print.css">
+        <link rel="stylesheet" href="../../vendor/photoswipe/photoswipe.css" >
+        <link rel="stylesheet" href="../../vendor/photoswipe/default-skin/default-skin.css" >
         <!-- endbuild -->
     </head>    
