--- a/layouts/post.html
+++ b/layouts/post.html
@@ -6,7 +6,8 @@
     {{#isAxeRecherche}}{{> axeRecherche}}{{/isAxeRecherche}}
     {{#isAxeFormation}}{{> axeFormation}}{{/isAxeFormation}}
     <article class="article-{{axe}} articleDetail">
-        {{> articleInfo}}
+        {{>articleInfo}}
+        {{>photos}}
         {{&contents}}   
         {{>inscriptionTarif}}
         <h2>Documents annexes</h2>
