--- a/layouts/partials/footer.html
+++ b/layouts/partials/footer.html
@@ -22,6 +22,8 @@
         <div class="site-cache"></div>
     </div>  <!-- balise de fin ".pusher" --> 
 </div>  <!-- balise de fin ".wrapper" -->
+    <script src="../../vendor/photoswipe/photoswipe.min.js" ></script>
+    <script src="../../vendor/photoswipe/photoswipe-ui-default.min.js" ></script>
     <script src="../../js/myApp.js"></script>
     <script src="../../js/nav.js"></script>
 </body>
