--- a/layouts/partials/footer.html
+++ b/layouts/partials/footer.html
@@ -24,6 +24,7 @@
 </div>  <!-- balise de fin ".wrapper" -->
     <script src="../../vendor/photoswipe/photoswipe.min.js" ></script>
     <script src="../../vendor/photoswipe/photoswipe-ui-default.min.js" ></script>
+    <script src="../../js/myGallery.js"></script>
     <script src="../../js/myApp.js"></script>
     <script src="../../js/nav.js"></script>
 </body>
