--- a/css/icon.less
+++ b/css/icon.less
@@ -22,18 +22,17 @@
 }
 
 .icon-email:before {
-	content: "\f003";
+    content: "\f003";
 }
-
+.icon-image:before {
+    content: "\f03e";
+}
 .icon-location:before {
-	content: "\f041";
-}
-.icon-facebook:before {
-	content: "\f09a";
+    content: "\f041";
 }
 .icon-calendar:before {
-	content: "\f133";
+    content: "\f133";
 }
 .icon-pdf:before {
-	content: "\f1c1";
+    content: "\f1c1";
 }
