--- a/layouts/partials/article-info.html
+++ b/layouts/partials/article-info.html
@@ -5,4 +5,5 @@
 <div class="article-info">
     <span class="icon-calendar"></span><span class="article-date u-mlxs">{{dateAffichage}}</span>
 {{#if ville}}<span class="icon-location u-mlm"></span><span class="article-ville u-mlxs">{{ville}} ({{departement}})</span>{{/if}}
+{{#hasPhotos}}<span class="icon-image u-mlm"></span><span class="u-mlxs">{{photos.length}} photos</span>{{/hasPhotos}}
 </div>
